Changes: hero background

--- a/src/scss/page/index.scss
+++ b/src/scss/page/index.scss
@@ -18,7 +18,8 @@
 .hero{
     background:url(../../../public/img/common/bg_hero.png);
     background-position:center;
-    background-size:contain;
+    background-size:cover;
+    background-repeat: no-repeat;
     min-height: 100vh;
     width: 100vw;
     position:relative;
