--- a/src/scss/object/project/_footer.scss
+++ b/src/scss/object/project/_footer.scss
@@ -11,7 +11,7 @@
         display: flex;
         align-items: center;
         a{
-            padding:0px 42px;
+            padding:0px 2.2vw;
             
         }
     }
