adding takeout & menu section and adding more images

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -13,7 +13,7 @@ $base-size: 5;
 VARIABLE FOR MIXINS WRAPPER
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
 */
-$body-max-width: 77.857vw; // CHECK DESIGN FOR THE CONTENT WIDTH
+$body-max-width: 1090px; // CHECK DESIGN FOR THE CONTENT WIDTH
 $gutter-sp:30px;
 $gutter-pc:20px;
 
