--- a/src/scss/page/key_components.scss
+++ b/src/scss/page/key_components.scss
@@ -131,10 +131,10 @@ main{overflow: hidden;}
 
 footer{
     background: #C8161D;
-    padding: 6.429vw 0 4.286vw 0;
+    padding: 100px 0 65px;
 
     @media only screen and (max-width: 769px){
-        padding: 9.375vw 0 10.417vw 0;   
+        padding: 75px 0 80px;   
     }
 
     .view_pc{
