--- a/src/scss/page/index.scss
+++ b/src/scss/page/index.scss
@@ -2,6 +2,51 @@
 @import "../core/mixins";
 @import "../core/variables";
 
+
+// ================================================
+//                    HERO
+// ================================================
+.hero {
+    background: url(../../../public/img/common/bg_hero.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    width: 100vw;
+    position: relative;
+  
+    &__top {
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+    }
+    
+    &__bottom{
+        position: absolute;
+        bottom: 10.3%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        .scroll{
+            a{
+                display: block;
+                writing-mode: vertical-rl;
+                position: relative;
+                padding-top: 5px;
+                
+                .line{
+                    position: absolute;
+                    left: -5px;                    
+                    bottom: -242%;
+                    width: 1px;
+                    height: 135px;
+                    background: #fff;
+                }
+            }
+        }
+    }
+}
+
 // ================================================
 //                    CONCEPT
 // ================================================
@@ -12,7 +57,7 @@
     .con_stage{
         position: relative;
         width: 100%;
-        background-image: url('../../../src/image/concept/con_bg.png');
+        background-image: url('../../../public/img/concept/con_bg.png');
         background-size: cover; 
         padding: 105px 0 115px;  
         overflow: hidden;
@@ -27,7 +72,7 @@
         
         &::before{
             content: '';
-            background: url('../../../src/image/concept/con_pattern.png');
+            background: url('../../../public/img/concept/con_pattern.png');
             background-size: 11.071vw 100vw;
             position: absolute;
             left: 0;
@@ -37,7 +82,7 @@
             transform: translate(-0%, -50%);
 
             @media only screen and (max-width: 769px){
-                background: url('../../../src/image/concept/sp_con_pattern_temp1.png');
+                background: url('../../../public/img/concept/sp_con_pattern_temp1.png');
                 background-size: 100% 10.417vw;
                 width: 100%;
                 height: 10.417vw;
@@ -45,7 +90,7 @@
             }
 
             @media only screen and (max-width: 481px){
-                background: url('../../../src/image/concept/sp_con_pattern_temp1.png');
+                background: url('../../../public/img/concept/sp_con_pattern_temp1.png');
                 background-size: 100% 10.417vw;
                 width: 100%;
                 height: 10.417vw;
@@ -55,7 +100,7 @@
 
         &::after{
             content: '';
-            background: url('../../../src/image/concept/con_pattern.png');
+            background: url('../../../public/img/concept/con_pattern.png');
             background-size: 11.071vw 100vw;
             position: absolute;
             right: 0;
@@ -172,13 +217,20 @@
     // end con_stage
     
     .con_burger{
-        content: url('../../../src/image/concept/con_burger.png');
+        content: url('../../../public/img/concept/con_burger.png');
         position: absolute;
         top: -28.429vw;
         right: -15.571vw;
         width: 790px;
         height: auto;
         z-index: 2;
+
+        @media only screen and (max-width: 1051px){
+            top: -41.429vw;
+            right: -39.571vw;
+            width: 75.238vw;
+            height: auto;
+        }
 
         @media only screen and (max-width: 481px){
             width: 67.708vw;
@@ -200,7 +252,7 @@
     .q_stage{
         position: relative;
         width: 100%;
-        background-image: url('../../../src/image/quality/q_bg.png');
+        background-image: url('../../../public/img/quality/q_bg.png');
         background-repeat: repeat-x;
         background-size: 100% 102px;
         overflow: hidden;
@@ -211,7 +263,7 @@
         }
 
         .q_burger{
-            content: url('../../../src/image/quality/q_burger.png');
+            content: url('../../../public/img/quality/q_burger.png');
             position: absolute;
             top: 50%;
             left: 50%;
@@ -417,7 +469,7 @@
     .m_stage{
         position: relative;
         width: 100%;
-        background-image: url('../../../src/image/menu/tk_bg.svg');
+        background-image: url('../../../public/img/menu/tk_bg.svg');
         background-size: cover; 
         padding: 125px 0 105px;  
         overflow: hidden;
@@ -579,7 +631,7 @@
     .tk_stage{
         position: relative;
         width: 100%;
-        background-image: url('../../../src/image/concept/con_bg.png');
+        background-image: url('../../../public/img/concept/con_bg.png');
         background-size: cover; 
         padding: 55px 0 65px;  
         overflow: hidden;
@@ -594,7 +646,7 @@
         
         &::before{
             content: '';
-            background: url('../../../src/image/concept/con_pattern.png');
+            background: url('../../../public/img/concept/con_pattern.png');
             background-size: 11.071vw 100vw;
             position: absolute;
             left: 0;
@@ -604,7 +656,7 @@
             transform: translate(-0%, -50%);
 
             @media only screen and (max-width: 769px){
-                background: url('../../../src/image/concept/sp_con_pattern_temp1.png');
+                background: url('../../../public/img/concept/sp_con_pattern_temp1.png');
                 background-size: 100% 10.417vw;
                 width: 100%;
                 height: 10.417vw;
@@ -612,7 +664,7 @@
             }
 
             @media only screen and (max-width: 481px){
-                background: url('../../../src/image/concept/sp_con_pattern_temp1.png');
+                background: url('../../../public/img/concept/sp_con_pattern_temp1.png');
                 background-size: 100% 10.417vw;
                 width: 100%;
                 height: 10.417vw;
@@ -622,7 +674,7 @@
 
         &::after{
             content: '';
-            background: url('../../../src/image/concept/con_pattern.png');
+            background: url('../../../public/img/concept/con_pattern.png');
             background-size: 11.071vw 100vw;
             position: absolute;
             right: 0;
@@ -749,7 +801,7 @@
     // end con_stage
     
     .tk_burger{
-        content: url('../../../src/image/takeout/tk_burger.png');
+        content: url('../../../public/img/takeout/tk_burger.png');
         position: absolute;
         top: 45%;
         left: 29.571vw;
@@ -802,7 +854,7 @@
         }
 
         .a_bg{
-            content: url('../../../src/image/access/access_bg.png');
+            content: url('../../../public/img/access/access_bg.png');
             position: absolute;
             top: 50%;
             left: 50%;
